Use public valhalla build to test.